--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Tecneu</string>
+    <string name="api_url">http://192.168.100.3:3000/api</string>
 
     <string name="login_username">Nombre de usuario</string>
     <string name="login_password">Contraseña</string>
