--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Tecneu</string>
-    <string name="api_url">http://192.168.100.8:3000/api</string>
+    <string name="api_url">https://192.168.100.8:3000/api</string>
+    <string name="socketio_url">https://192.168.100.8:3000/socket.io</string>
 
     <string name="login_username">Nombre de usuario</string>
     <string name="login_password">Contraseña</string>
