--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -76,6 +76,7 @@
 
     <string name="settings_fragment_title">Opciones</string>
     <string name="settings_fragment_meli">Vincular con mercado libre</string>
+    <string name="settings_fragment_changep">Cambiar contraseña</string>
     <string name="fragment_product_title">Titulo: </string>
     <string name="fragment_product_price">precio: </string>
     <string name="fragment_product_available_quantity">cantidad disponible: </string>
