--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -86,4 +86,5 @@
     <string name="cuser_fragment_user_person_name">Nombre de la persona</string>
     <string name="cuser_fragment_user_surname">Apellidos</string>
     <string name="cuser_fragment_edit_access">Modificar accesos</string>
+    <string name="cprovider_fragment_modify_provider">Modificar proveedor</string>
 </resources>
